# PRtoday

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: architecture.md  prd.md  sprint-plan.md  user-flow.md
docs/adr/: 0001-use-python-typer-rich-for-cli.md
pr_sentinel/: __init__.py  db.py  github.py
pr_sentinel/risk/: test_detector.py
pr_today/: __init__.py  ai.py  ai_engine.py  auth.py  cli.py  config.py  dashboard.py  database.py  db.py  github.py  models.py  orchestrator.py  risk_engine.py
pr_today/api/: __init__.py  main.py  schemas.py
pr_today/api/routes/: __init__.py  analyze.py  health.py  history.py
pr_today/migrations/: env.py
pr_today/migrations/versions/: 001_initial_schema.py
pr_today/risk/: __init__.py  blast_radius.py  scorer.py  test_detector.py
pr_today/services/: __init__.py  risk_engine_service.py
tests/: test_ai.py  test_ai_engine.py  test_auth.py  test_blast_radius.py  test_cli.py  test_db.py  test_github.py  test_integration.py  test_risk_engine.py  test_risk_scorer.py  test_test_detector.py
