[tool.poetry]
name = "pr-sentinel"
version = "0.1.0"
description = "Predict production risk before merge."
authors = ["PR Sentinel Team"]
readme = "README.md"
packages = [{include = "pr_sentinel"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.12.0"
rich = "^13.0.0"
httpx = "^0.27.0"
sqlalchemy = "^2.0.0"
huggingface-hub = "^0.23.0"
litellm = "^1.0.0"
PyGithub = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pr-sentinel = "pr_sentinel.cli:app"

[tool.pyright]
venvPath = "."
venv = ".venv"
