[tool.poetry]
name = "pr-today"
version = "2.0.0"
description = "Predict production risk before merge."
authors = ["PR Today Team"]
readme = "README.md"
packages = [{include = "pr_today"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.12.0"
rich = "^13.0.0"
pygithub = ">=2.3.0"
httpx = ">=0.27.0"
sqlalchemy = ">=2.0.0"
aiosqlite = ">=0.20.0"
litellm = ">=1.0.0"
pydantic-settings = ">=2.0.0"
python-dotenv = ">=1.0.0"
# V2: FastAPI + async infrastructure
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.30.0", extras = ["standard"]}
asyncpg = ">=0.30.0"
alembic = ">=1.14.0"
redis = ">=5.0.0"
pydantic = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.4.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pr-today = "pr_today.cli:app"

[project]
name = "pr-today"
version = "2.0.0"
description = "Predict production risk before merge."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pygithub>=2.3.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "litellm>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
pr-today = "pr_today.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
# Enable basic Pyflakes and Pycodestyle rules
lint.select = ["E", "F", "W", "I"]
lint.ignore = ["E501"]
